--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
         </figure>
         <figure style="padding-left: 15px;">
             <figcaption style="color:white; justify-content: start; align-items:start; display:flex;">
+                Saturation changer:</figcaption>
+            <div style="justify-content: start; align-items:start; display:flex;">
+                <input id="saturation" type="range" onchange="changeSaturation();" min="1" max="10" value='10' step="1" />
+                <span id="resultSaturation" style="color:white;"></span>
+            </div>
+        </figure>
+        <figure style="padding-left: 15px;">
+            <figcaption style="color:white; justify-content: start; align-items:start; display:flex;">
+                Lighntess changer:</figcaption>
+            <div style="justify-content: start; align-items:start; display:flex;">
+                <input id="lightness" type="range" onchange="changeLightness();" min="1" max="10" value='5' step="1" />
+                <span id="resultLightness" style="color:white;"></span>
+            </div>
+        </figure>
+        <figure style="padding-left: 15px;">
+            <figcaption style="color:white; justify-content: start; align-items:start; display:flex;">
                 Heart</figcaption>
             <div style="justify-content: start; align-items:start; display:flex;">
                 <input id="centerHeart" type="checkbox" onchange="functionHeart();" min="1" max="10" value='1' step="0.5" />
